fixed spacing

--- a/application/tutorlink/static/css/tutor.css
+++ b/application/tutorlink/static/css/tutor.css
@@ -93,6 +93,7 @@ td
     font-size: 30px;
     background-color: #fc3;
     color: #303;
+    margin-bottom: 20px;
 }
 #message-button:hover
 {
